WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271783
AX: The selected children property of a list that is not owned or controlled by its combobox is not updated in ITM.
https://bugs.webkit.org/show_bug.cgi?id=271783
Summary
AX: The selected children property of a list that is not owned or controlled ...
Andres Gonzalez
Reported
2024-03-27 12:43:33 PDT
.
Attachments
Patch
(8.39 KB, patch)
2024-03-27 13:04 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(9.00 KB, patch)
2024-03-27 19:27 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-27 12:43:42 PDT
<
rdar://problem/125504735
>
Andres Gonzalez
Comment 2
2024-03-27 13:04:35 PDT
Created
attachment 470624
[details]
Patch
Andres Gonzalez
Comment 3
2024-03-27 19:27:33 PDT
Created
attachment 470632
[details]
Patch Fixing glib expectations.
EWS
Comment 4
2024-03-28 08:50:55 PDT
Committed
276779@main
(17e09328dff3): <
https://commits.webkit.org/276779@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470632
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug